--- a/FlightDiary/flightdiary/src/main/res/values/colors.xml
+++ b/FlightDiary/flightdiary/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#EC407A</color>
-    <color name="colorPrimaryDark">#D81B60</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#E53935</color>
+    <color name="colorPrimaryDark">#E53935</color>
+    <color name="colorAccent">#E53935</color>
 </resources>
