--- a/FlightDiary/flightdiary/src/main/res/layout/activity_main.xml
+++ b/FlightDiary/flightdiary/src/main/res/layout/activity_main.xml
@@ -21,6 +21,9 @@
         android:text="Last Flight Added"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
+
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="87dp"
@@ -64,6 +67,15 @@
 
 
     </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/totalData"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:text="Total flights in Database: 0"
+        
+        />
 
 
 </LinearLayout>
