--- a/FlightDiary/flightdiary/src/main/res/values/colors.xml
+++ b/FlightDiary/flightdiary/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#E53935</color>
-    <color name="colorPrimaryDark">#E53935</color>
-    <color name="colorAccent">#E53935</color>
+    <color name="colorPrimaryDark">#C62828</color>
+    <color name="colorAccent">#C62828</color>
 </resources>
