--- a/FlightDiary/flightdiary/src/main/res/layout/activity_flight_click.xml
+++ b/FlightDiary/flightdiary/src/main/res/layout/activity_flight_click.xml
@@ -20,12 +20,6 @@
             android:layout_margin="5dp"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Flight Details"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -154,6 +148,7 @@
                 android:text="Get Airframe Info"
                 android:textAllCaps="false"
                 android:id="@+id/flightDetailAirframe"
+                android:onClick="getAirframe"
                 />
 
 
